fixed layout problems

--- a/css/backlog.css
+++ b/css/backlog.css
@@ -22,21 +22,49 @@ body {
     background-color: #e78637;
 }
 
-.categories_backlog {
+.new_category_backlog {
+    background-color: #8d8d8d;
+}
+
+.bold_backlog {
     font-size: 22px;
     font-weight: 900;
+}
+
+.span_backlog {
+    width: 33.33%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+
+.user_container_backlog {
+    justify-content: flex-start;
+}
+
+.category_container_backlog {
+    justify-content: center;
+}
+
+.details_container_backlog {
+    justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 #backlog_container {
     padding: 20px;
     width: calc(100vw - 250px);
-    box-sizing: border-box;    
+    display: flex;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 h2 {
     margin: 0;
     color: white;
     font-size: 24px;
+    position: absolute;
 }
 
 .task_container_backlog {
@@ -48,7 +76,8 @@ h2 {
     padding: 24px;
     margin: 10px 0;
     min-height: 120px;
-    width: 80%;
+    max-height: 300px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,12 +98,26 @@ h2 {
 }
 
 #backlog_header {
-    margin: 200px 0 20px;
-    width: 80%;
+    margin-bottom: 20px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     color: white;
     font-size: 22px;
+}
+
+#backlog_content_container {
+    margin-top: 200px;
+    flex: 1;
+}
+
+#backlog_button_container {
+    padding-top: 250px;
+    width: 300px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    box-sizing: border-box;
 }
 
 #backlog_content {
@@ -83,9 +126,9 @@ h2 {
 }
 
 .add_to_board_btn {
-    margin: 0 auto;
+    margin-left: 20px;
     height: 80px;
-    width: 18%;
+    width: 300px;
     align-self: center;
     font-size: 22px;
     color: white;
@@ -99,13 +142,38 @@ h2 {
     background-color: #3763c2;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1800px) {
+    #backlog_button_container {
+        width: 200px;
+    }
+
+    .add_to_board_btn {
+        width: 200px;
+    }
+}
+
+@media (max-width: 1500px) {
     .add_to_board_btn {
         font-size: 18px;
     }
 }
 
+@media (max-width: 1200px) {
+    #backlog_button_container {
+        width: 140px;
+    }
+
+    .add_to_board_btn {
+        width: 140px;
+    }
+}
+
 @media (max-width: 1000px) {
+    .add_to_board_btn {
+        margin-left: 10px;
+        font-size: 16px;
+    }
+
     #backlog_container {
         width: calc(100vw - 180px);
     }
@@ -118,6 +186,14 @@ h2 {
 @media (max-width: 800px) {
     #backlog_container {
         width: 100%;
+    }
+
+    #backlog_content_container {
+        width: 100%;
+    }
+
+    #backlog_button_container {
+        display: none;
     }
 
     .task_card_backlog {
